[gd_scene load_steps=9 format=3 uid="uid://d08dl5730uq5o"]

[ext_resource type="Texture2D" uid="uid://b8asnwa4cvbfk" path="res://themes/wood/graphics/smallBtnNormalSingle.png" id="1_21l7p"]
[ext_resource type="Script" uid="uid://dtuiw7bg3exiq" path="res://resource/ui/widgets/container/w_save_slots.gd" id="1_o2k3p"]
[ext_resource type="Script" uid="uid://cj1xykbtsmsri" path="res://resource/components/ui/buttons/button_small.gd" id="2_o2k3p"]
[ext_resource type="Texture2D" uid="uid://tshu5tfikj0l" path="res://assets/ui/svg/close.svg" id="3_wbxf5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wi548"]
texture = ExtResource("1_21l7p")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g42rj"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_21l7p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o2k3p"]

[node name="WSaveSlots" type="MarginContainer"]
custom_minimum_size = Vector2(320, 64)
script = ExtResource("1_o2k3p")

[node name="BtnLoad" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g42rj")
theme_override_styles/hover = SubResource("StyleBoxFlat_g42rj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_g42rj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_21l7p")
text = "存档1"
alignment = 0
script = ExtResource("2_o2k3p")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="MarginContainer" type="MarginContainer" parent="BtnLoad"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_bottom = 16.0
grow_horizontal = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BtnDelete" type="Button" parent="BtnLoad/MarginContainer"]
layout_mode = 2
tooltip_text = "删除存档"
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g42rj")
theme_override_styles/hover = SubResource("StyleBoxFlat_g42rj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_g42rj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o2k3p")
icon = ExtResource("3_wbxf5")
script = ExtResource("2_o2k3p")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[connection signal="pressed" from="BtnLoad" to="." method="_on_btn_load_pressed"]
[connection signal="pressed" from="BtnLoad/MarginContainer/BtnDelete" to="." method="_on_btn_delete_pressed"]
